Make sure we include the overflow area in the size of views, for blocks and inlines, at least.  b=79315  r+sr=roc